Update to 0.4.1 - streamlined max-width-properties - simplified .container class functionality

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -155,7 +155,7 @@ table td
 
 
 /* Temp overrides */
-.content.custom img.max-width-s
+.content.custom img.max-width-600
   max-width 600px
 
 .btn.size-l
