--- a/src/global.styl
+++ b/src/global.styl
@@ -135,7 +135,7 @@ $offset-2xl = 80px
 |-----------------------------------------------------------------------------------------------------------------------
 */
 $widths = 30, 50, 70, 100, 150, 200, 250, 300, 400, 500
-$max-widths = 30, 50, 70, 100, 150, 200, 250, 300, 400, 500
+$max-widths = 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600, 900, 1200, 1500
 $heights = 30, 50, 70, 100
 $max-heights = 30, 50, 70, 100
 
@@ -151,17 +151,18 @@ $body-background = $white
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
-| Page offsets
+| Page padding
 |-----------------------------------------------------------------------------------------------------------------------
 |
-| These values allow you to define how much space you want there to be to the left and right of your content area.
+| These variables determine the amount of empty space to the left and right of your content area.
 | Usually you would want more space on larger screens and as little as possible on small ones.
 |
 */
-$page-offset-s = $offset-s
-$page-offset-m = $offset-m
-$page-offset-l = $offset-l
-$page-offset-xl = $offset-xl
+$page-padding-on-s = $offset-s
+$page-padding-on-m = $offset-m
+$page-padding-on-l = $offset-m
+$page-padding-on-x = $offset-m
+$page-padding-on-p = $offset-m
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
